--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ llama-cpp-python==0.1.55 ; python_version >= "3.10" and python_version < "4.0"
 gpt4all==0.2.3 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 langchain-experimental==0.0.43
-unstructured[all-docs]
+unstructured[all-docs] # TOO LARGE!
 pdf2image
 pdfminer.six
 faiss-cpu # -gpu for local with GPU
