--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN yarn add express pug socket.io 
+RUN yarn add express pug socket.io multer
 RUN npm install
 COPY . .
 EXPOSE 5555
