--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "dependencies": {
         "express": "^4.18.2",
+        "form-data": "^4.0.0",
+        "multer": "^1.4.5-lts.1",
         "pug": "^3.0.2",
         "socket.io": "^4.7.2"
     },
