--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,8 @@
-FROM python:3.9
-WORKDIR /usr/src/app
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
-COPY . .
-EXPOSE 8080
-CMD ["uvicorn", "app.main:app", "--port", "8080", "--env-file", ".env"]
+FROM tiangolo/uvicorn-gunicorn-fastapi:python3.9
+ENV VIRTUAL_ENV=/opt/venv
+RUN python3  -m venv --system-site-packages $VIRTUAL_ENV
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+COPY ./requirements.txt /app/requirements.txt
+RUN python3 -m pip install --no-cache-dir --upgrade -r /app/requirements.txt
+COPY ./app /app
+
