--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
 version: '3.8'
 services:
-  python_app:
+  ragai:
     build: ./app
-    container_name: python_app
+    container_name: agent-fw
     ports:
       - 3000:8080
     volumes:
-      - ./sqldb:/sqldb
-      - ./vdb:/vdb
+      - ./sqldb:/sqldb:rw
+      - ./app/app/:/app
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+
   web_app:
     build: ./web
     container_name: web_app
     ports:
       - 5555:5555
     depends_on:
-      - python_app
+      - ragai
